tests/valid/ConstrainedList_Valid_5.whiley
string f():
    return ""

void main([string] args):
    out->println(f())
